<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5a5a5a"
    tools:context=".addUsername">

    <ImageView
        android:id="@+id/smallerLogo"
        android:layout_width="274dp"
        android:layout_height="243dp"
        android:contentDescription="@string/vcu_scavenger_hunt_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="274dp"
        android:layout_height="97dp"
        android:layout_marginTop="28dp"
        android:text="@string/what_do_you_want_to_be_called"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smallerLogo"
        app:layout_constraintVertical_bias="0.013" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="274dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/backBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_button"
        android:onClick="onClickBack"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/submitBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="190dp"
        android:layout_height="73dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:onClick="onClickSubmit"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintVertical_bias="0.246" />

    <Button
        android:id="@+id/infoBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="onClickInfo"
        android:background="@drawable/info_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/charCount"
        android:layout_width="19dp"
        android:layout_height="22dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_10"
        android:textAlignment="textEnd"
        android:textColor="#FDA50A"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:layout_constraintTop_toTopOf="@+id/usernameEditText"
        app:layout_constraintVertical_bias="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>