<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5a5a5a"
    tools:context=".Question">

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/backBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_button"
        android:onClick="onClickBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="239dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/vcu_scavenger_hunt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <ImageView
        android:id="@+id/imageImageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:contentDescription="@string/picture_related_to_current_hunting_spot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionTextView"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="381dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageImageView" />

    <Button
        android:id="@+id/mapBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/map_btn"
        android:onClick="onClickMap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBtn"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/homeBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/home_bttn"
        android:onClick="onClickHome"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/your_answer_here"
        android:inputType="text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:onClick="onSubmit"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerEditText" />

    <Button
        android:id="@+id/infoBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="onClickInfo"
        android:background="@drawable/info_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="6dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBtn" />

    <ImageView
        android:id="@+id/checkImageView"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/this_question_has_been_answered_correctly"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/answerEditText"
        app:layout_constraintEnd_toEndOf="@+id/answerEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/answerEditText"
        app:srcCompat="@drawable/check" />

</androidx.constraintlayout.widget.ConstraintLayout>